Alterando a rota /produtos/ para receber as categorias pela url e nao mais no body
